# DevopsLabWorkTwo

./: .HTTP_server.cpp.swp  .Makefile.am.swp  .gitignore  .main.cpp.swp  Calculation  Calculation.1  Calculation.cpp  Calculation.elf  Calculation.h  Dockerfile  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  README.md  calculation-0.1.tar  config.status  configure  configure.ac  configure~  deb.deb  main.cpp
.deps/: Calculation.Po  HTTP_Server.Po  main.Po
.github/workflows/: c-cpp.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.1
deb/DEBIAN/: control
tests/: Makefile  Makefile.am  Makefile.in  calculationTest1  main.cpp
tests/.deps/: main.Po
